@@ -18,6 +18,8 @@ Date: 2025-28-09
     - Added the geothermal plant, which is unlocked in yellow science and requires a special fluid and fuel to function.
     - Added new graphics for the welder!
     - Remodelled the atmospheric condenser, and added diode lights to it!
+    - Added a tier 2 atmospheric condenser. you'll need it.
+    - Added new technologies and infinite bonus technologies to post-space science. Not all of them though, some gotta be saved for the post-game ;)
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
